# xdrfile

./: .clang-format  .gitattributes  .travis.yml  CMakeLists.txt  INSTALL  README  clang-format.sh
include/: xdrfile.h  xdrfile_trr.h  xdrfile_xtc.h
scripts/: clang-format.sh  setup-travis.sh
src/: xdrfile.c  xdrfile_c_test.c  xdrfile_trr.c  xdrfile_xtc.c
test_data/: traj_comp_n11.xtc  traj_comp_n3.xtc  traj_n3.trr  traj_n3_xvf.trr
tests/: CMakeLists.txt  trr.c  xdrfile.c  xtc.c
